Fix small typo in sim-v-obs rmd

--- a/03-post-process/compare-sim-to-obs.Rmd
+++ b/03-post-process/compare-sim-to-obs.Rmd
@@ -785,7 +785,7 @@ prep_est_ratios = function(x, q) {
   x = x[order(x$Class, x$Type, x$LH_type, x$origin),]
   
   colnames(x)[which(colnames(x) == "LH_type")] = "Mig. Type"
-  colnames(x)[which(colnames(x) == "Origin")] = "Origin"
+  colnames(x)[which(colnames(x) == "origin")] = "Origin"
   
   return(x)
 }
