--- a/03-post-process/output-plots-children/03-fit-to-data.Rmd
+++ b/03-post-process/output-plots-children/03-fit-to-data.Rmd
@@ -1,3 +1,8 @@
+---
+editor_options: 
+  chunk_output_type: console
+---
+
 # Fit to Data {.tabset .tabset-pills}
 
 ## Figures {.tabset .tabset-dropdown}
