--- a/03-post-process/output-plots-children/06-capacity-vs-habitat.Rmd
+++ b/03-post-process/output-plots-children/06-capacity-vs-habitat.Rmd
@@ -1,3 +1,8 @@
+---
+editor_options: 
+  chunk_output_type: console
+---
+
 # Parr Capacity vs. Habitat Relationship {.tabset .tabset-pills}
 
 ## Scatterplot
