--- a/03-post-process/output-plots-children/08-equiv-rates.Rmd
+++ b/03-post-process/output-plots-children/08-equiv-rates.Rmd
@@ -1,3 +1,8 @@
+---
+editor_options: 
+  chunk_output_type: console
+---
+
 # Equivilency Rates {.tabset .tabset-pills}
 
 ## Smolt-to-Adult Rates {.tabset .tabset-pills}
