--- a/03-post-process/output-plots-children/09-rho-params.Rmd
+++ b/03-post-process/output-plots-children/09-rho-params.Rmd
@@ -1,3 +1,8 @@
+---
+editor_options: 
+  chunk_output_type: console
+---
+
 # Correlation Parameters
 
 ```{r rho_plot, fig.width = 6, fig.height = 7}
