--- a/03-post-process/output-plots-children/10-noise-term-diags.Rmd
+++ b/03-post-process/output-plots-children/10-noise-term-diags.Rmd
@@ -1,3 +1,8 @@
+---
+editor_options: 
+  chunk_output_type: console
+---
+
 # Random Noise Diagnostics {.tabset .tabset-pills}
 
 ```{r misc-resid-fns}
