--- a/03-post-process/output-plots-children/07-misc-process-model.Rmd
+++ b/03-post-process/output-plots-children/07-misc-process-model.Rmd
@@ -1,3 +1,8 @@
+---
+editor_options: 
+  chunk_output_type: console
+---
+
 # Miscellaneous Process Model Components {.tabset .tabset-pills}
 
 ## Migratory Strategy Apportionment
