--- a/03-post-process/output-plots-children/11-param-summaries.Rmd
+++ b/03-post-process/output-plots-children/11-param-summaries.Rmd
@@ -1,3 +1,8 @@
+---
+editor_options: 
+  chunk_output_type: console
+---
+
 # Parameter Summaries {.tabset .tabset-dropdown}
 
 ```{r my-boxplot-function}
